--- a/Kroegentocht/package.json
+++ b/Kroegentocht/package.json
@@ -12,10 +12,11 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "jade": "~1.11.0",
+    "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   },
-   "devDependencies": {
+  "devDependencies": {
     "chai": "^2.1.2",
     "mocha": "^2.2.1",
     "supertest": "^0.15.0"
