--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "istanbul cover node_modules/mocha/bin/_mocha -- -R spec"
   },
   "dependencies": {
+    "ajax-request": "^1.2.1",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
