--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-session": "^1.13.0",
+    "http": "0.0.0",
     "jade": "~1.11.0",
     "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "socket.io": "^1.4.5"
   },
   "devDependencies": {
     "chai": "^2.1.2",
