--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "~4.13.1",
     "express-session": "^1.13.0",
     "http": "0.0.0",
+    "istanbul": "^0.4.2",
     "jade": "~1.11.0",
     "mongoose": "^4.4.6",
     "morgan": "~1.6.1",
